# space

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
src/: main.cpp
src/interface/console/: InterfaceConsole.h  InterfaceTerminalConsole.cpp  InterfaceTerminalConsole.h
src/interface/glfw-3.1.2/docs/html/: intro.html
src/state/: GlobalState.cpp  GlobalState.h
src/threads/: Thread.cpp  Thread.h  console.cpp  console.h  rendering.cpp  rendering.h
src/util/: utils.cpp  utils.h
src/utils/: dictionary.cpp  dictionary.h
src/utils/data_types/: Type.cpp  Type.h
